# teamster-core

./: .dockerignore  .gitignore  .pdm.toml  Dockerfile  README.md  Template.env  cloud-workspace.yaml  compose.yaml  dagster.yaml  pyproject.toml  wi-config.sh
.dagster/: alert-policies.yaml  cloud-workspace-gh.yaml.tmpl  cloud-workspace-prod.yaml.tmpl  cloud-workspace-stg.yaml.tmpl  dagster-cloud-workspace-sync.sh
.deploy/: cloud-workspace-dev.yaml  cloud-workspace-dev.yaml.tmpl  cloud-workspace-stg.yaml  cloud-workspace-stg.yaml.tmpl  cloud-workspace.yaml  cloud-workspace.yaml.tmpl  dagster-cloud-workspace-sync.sh
.gcp/: gh-wi-federation.sh  gh-wi-sa.sh  gh-wif.sh  patch-deployment.sh  wi-config.sh  wi-test.yaml
.github/workflows/: dagster-cloud-cicd.yaml  dagster-cloud-cicd.yaml.tmpl
.google/: gh-wi-sa.sh
.trunk/: out  trunk.yaml
env/: .env.tmpl  dev.env.tmpl  envsubst-file.sh  prod.env.tmpl  stg.env.tmpl
history/: runs.db
history/runs/: index.db
teamster/: README.md  __init__.py  repository.py  setup.py  workspace.yaml
teamster/common/: __init__.py
teamster/common/config/: google-resource.yaml  powerschool-resource.yaml  powerschool.py  sql-resource.yaml
teamster/common/config/datagun/: __init__.py
teamster/common/config/google/: resource.yaml
teamster/common/config/powerschool/: __init__.py  resource.yaml
teamster/common/graphs/: powerschool.py
teamster/common/ops/: datagun.py  google.py  powerschool.py
teamster/common/resources/: google.py  powerschool.py  sql.py
teamster/common/utils/: __init__.py
teamster/graphs/: powerschool.py
teamster/history/: runs.db
teamster/history/runs/: index.db
teamster/kippnewark/: __init__.py  repository.py
teamster/kippnewark/config/powerschool/: README.md  query-test.yaml  test-queries.yaml
teamster/kippnewark/jobs/: powerschool.py
teamster/local/: __init__.py  repository.py
teamster/local/config/powerschool/: README.md  query-test.yaml
teamster/local/jobs/: __init__.py
teamster/local/jobs/powerschool/: jobs.py
teamster/resources/: powerschool.py
teamster/storage/96c97316-fda5-46cb-b465-af169584fcf7/compose_queries/query/: cc_2_0  log_3_0  schools_0_0  students_1_0
teamster/storage/96c97316-fda5-46cb-b465-af169584fcf7/get_client/: result
teamster/storage/96c97316-fda5-46cb-b465-af169584fcf7/get_table[cc_2_0]/: result
teamster/storage/96c97316-fda5-46cb-b465-af169584fcf7/get_table[log_3_0]/: result
teamster/storage/96c97316-fda5-46cb-b465-af169584fcf7/get_table[schools_0_0]/: result
teamster/storage/96c97316-fda5-46cb-b465-af169584fcf7/get_table[students_1_0]/: result
teamster/storage/96c97316-fda5-46cb-b465-af169584fcf7/query_count[cc_2_0]/: table_query
teamster/storage/96c97316-fda5-46cb-b465-af169584fcf7/query_count[schools_0_0]/: table_query
teamster/storage/96c97316-fda5-46cb-b465-af169584fcf7/query_count[students_1_0]/: table_query
teamster/storage/96c97316-fda5-46cb-b465-af169584fcf7/query_data[cc_2_0]/: data
teamster/storage/96c97316-fda5-46cb-b465-af169584fcf7/query_data[schools_0_0]/: data
teamster/storage/96c97316-fda5-46cb-b465-af169584fcf7/query_data[students_1_0]/: data
teamster/teamster/: __init__.py  repository.py
teamster/teamster/graphs/: hello_cereal_jobs.py  say_hello.py
teamster/teamster/ops/: hello_cereal.py
teamster/teamster/schedules/: my_hourly_schedule.py
teamster/teamster/sensors/: my_sensor.py
teamster/teamster_tests/test_graphs/: test_say_hello.py
teamster/teamster_tests/test_ops/: test_complex_job.py  test_hello.py
teamster/tutorial/: __init__.py  repository.py
teamster/tutorial/graphs/: hello_cereal_jobs.py  say_hello.py
teamster/tutorial/ops/: hello_cereal.py
teamster/tutorial/schedules/: my_hourly_schedule.py
teamster/tutorial/sensors/: my_sensor.py
