[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Charlie Bini", email = "5003326+cbini@users.noreply.github.com"},
]
dependencies = [
    "dagster>=0.15.5",
    "dagster-cloud>=0.15.5",
    "dagster-gcp>=0.15.5",
    "dagster-ssh>=0.15.5",
    "powerschool>=3.6",
    "sqlalchemy>=1.4",
    "pyodbc>=4.0.32",
    "gspread>=5.4.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "dagster-docker>=0.15.5"
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
_.env_file = "./env/stg.env"
teamster-init.shell = "bash ./.dagster/teamster-init.sh"
gcloud-init.shell = "bash ./.google/gcloud-init.sh"
env-setup.env_file = "./env/.env"
env-setup.shell = "bash ./env/envsubst-file.sh"
pre_k8s-secret.shell = "pdm run env-setup prod"
k8s-secret.shell = "kubectl create secret generic ${INSTANCE_NAME} --save-config --dry-run=client --from-env-file ./env/prod.env --namespace dagster-cloud -o yaml | kubectl apply -f -"
docker-build.shell = "docker-compose build"
docker-bash.shell = "docker-compose run --rm dagster bash"
docker-run.shell = "docker-compose run --rm dagster dagster-cloud agent run ."
docker-push.shell = "docker push ${IMAGE_URI}"
pre_dagster-docker.shell = "pdm run env-setup stg"
dagster-docker.shell = 'dagster-cloud agent run --deployment stg --agent-token ${DAGSTER_CLOUD_AGENT_TOKEN} --user-code-launcher "dagster_cloud.workspace.docker.DockerUserCodeLauncher"'
dagster-local.shell = "docker-compose run --rm dagster dagster-cloud agent run ."
dagster-sync.shell = "bash ./.dagster/dagster-cloud-workspace-sync.sh"
